# ccdakit

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  COMPONENT_MAP.md  CONTRIBUTING.md  DEPLOYMENT.md  NULL_FLAVORS_IMPLEMENTATION_REPORT.md  README.md  SECURITY.md  ccd_20251022_133243.html  coverage.json  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  render.yaml  sitemap.xml  wsgi.py
.github/workflows/: docs.yml  publish.yml  tests.yml
about/changelog/: index.html
about/disclaimer/: index.html
about/license/: index.html
api/: index.html
api/builders/: index.html
api/core/: index.html
api/protocols/: index.html
api/sections/: index.html
api/utilities/: index.html
api/validators/: index.html
ccdakit/: __init__.py
ccdakit/builders/: __init__.py  common.py  demographics.py  document.py
ccdakit/cli/: __init__.py  __main__.py
ccdakit/core/: __init__.py  base.py  config.py  null_flavor.py  validation.py
ccdakit/protocols/: __init__.py  admission_diagnosis.py  advance_directive.py  allergy.py  anesthesia.py  assessment_and_plan.py  author.py  chief_complaint.py  complication.py  discharge_diagnosis.py  discharge_instructions.py  discharge_studies.py  encounter.py  family_history.py  functional_status.py  goal.py  health_concern.py  health_status_evaluation.py  hospital_course.py  immunization.py  instruction.py  intervention.py  medical_equipment.py  medication.py  medication_administered.py  mental_status.py  nutrition.py  past_medical_history.py  patient.py  payer.py  physical_exam.py  plan_of_treatment.py  postoperative_diagnosis.py  preoperative_diagnosis.py  problem.py  procedure.py  reason_for_visit.py  result.py  social_history.py  vital_signs.py
ccdakit/utils/: __init__.py  builders.py  code_systems.py  converters.py  factories.py  null_flavors.py  templates.py  test_data.py  validators.py  value_sets.py  xslt.py
ccdakit/validators/: __init__.py  base.py  common_rules.py  error_parser.py  rule_builder.py  rules.py  schematron.py  schematron_cleaner.py  schematron_downloader.py  utils.py  xsd.py  xsd_downloader.py
development/architecture/: index.html
development/builders/: index.html
development/contributing/: index.html
development/null-flavors/: index.html
development/protocols/: index.html
development/roadmap/: index.html
development/setup/: index.html
development/testing/: index.html
development/uv-guide/: index.html
development/versions/: index.html
docs/: index.md
docs/about/: changelog.md  disclaimer.md  license.md
docs/api/: builders.md  core.md  index.md  protocols.md  sections.md  utilities.md  validators.md
docs/development/: architecture.md  builders.md  contributing.md  null-flavors.md  protocols.md  roadmap.md  setup.md  testing.md  uv-guide.md  versions.md
docs/examples/: all-sections.md  builder-api.md  complete-document.md  custom-models.md  validation.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: cli.md  configuration.md  overview.md  protocols.md  sections.md  terminologies.md  validation.md
docs/reference/: code-systems.md  sections.md
examples/: admission_diagnosis_example.py  admission_medications_example.py  advance_directives_example.py  allergies_example.py  anesthesia_example.py  assessment_and_plan_example.py  builder_usage.py  chief_complaint_example.py  complications_example.py  custom_rules_usage.py  data_validation_usage.py  discharge_diagnosis_example.py  discharge_medications_example.py  discharge_studies_example.py  encounters_example.py  factory_usage.py  family_history_example.py  functional_status_example.py  generate_ccda.py  goals_example.py  health_concerns_example.py  health_status_evaluations_example.py  hospital_course_example.py  hospital_discharge_instructions_example.py  immunizations_example.py  instructions_example.py  interventions_example.py  json_conversion.py  medical_equipment_example.py  medications_administered_example.py  medications_example.py  mental_status_example.py  nutrition_example.py  past_medical_history_example.py  payers_example.py  physical_exam_example.py  plan_of_treatment_example.py  postoperative_diagnosis_example.py  preoperative_diagnosis_example.py  problems_example.py  (+10 more)
examples/all-sections/: index.html
examples/builder-api/: index.html
examples/complete-document/: index.html
schemas/: README.md
scripts/: setup_schematron.py  setup_xsd.py
search/: search_index.json
tests/: conftest.py
(+372 files in other folders)
